# holosoma

./: .gitignore  .pre-commit-config.yaml  conftest.py  mypy.ini  pyproject.toml
src/holosoma/: pyproject.toml  setup.py
src/holosoma/holosoma/bridge/base/: basic_sdk2py_bridge.py
src/holosoma/holosoma/config_types/: distribution.py  env.py  experiment.py  full_sim.py  observation.py  randomization.py  robot.py  run_sim.py  scene.py  simulator.py
src/holosoma/holosoma/config_types/tests/: test_link_physics.py
src/holosoma/holosoma/config_values/: robot.py  scene.py  simulator.py
src/holosoma/holosoma/envs/base_task/: base_task.py
src/holosoma/holosoma/envs/tests/: test_e2e.py  test_push_randomization.py
src/holosoma/holosoma/envs/wbt/: wbt_manager.py
src/holosoma/holosoma/examples/: __init__.py
src/holosoma/holosoma/managers/randomization/: base.py  manager.py
src/holosoma/holosoma/simulator/base_simulator/: base_simulator.py
src/holosoma/holosoma/simulator/isaacgym/: isaacgym.py  physics.py  urdf_scene_loader.py
src/holosoma/holosoma/simulator/isaacsim/: converters.py  events.py  isaacsim.py  object_spawner.py  prim_naming.py  prim_utils.py  proxy_utils.py  state_adapter.py
src/holosoma/holosoma/simulator/mujoco/: fields.py  mjw_views.py  mujoco.py  scene_manager.py  tensor_views.py
src/holosoma/holosoma/simulator/shared/: asset_format.py  object_registry.py  root_states_view.py  virtual_gantry.py
src/holosoma/holosoma/utils/: path.py  sampler.py  sim_utils.py  warp_utils.py
src/holosoma/holosoma/utils/tests/: test_distributions.py  test_keyed_distributions.py  test_torch_utils.py
src/holosoma/tests/simulators/: _dr_matrix.py  _robot_presets.py  _run_harness.py  _scene_presets.py  _sim_harness.py  all_root_states_unified_assert.py  behavior_assert.py  object_spawner_cfg_assert.py  scene_spawn_assert.py  static_move_assert.py  subset_write_assert.py  test_asset_format_matrix.py  test_behavior_skip_matrix.py  test_mujoco_marker_placeholder.py  test_multibody_scene_file.py  test_object_registry_ordering.py
src/holosoma/tests/simulators/isaacgym/: __init__.py  test_all_root_states_unified_isaacgym.py  test_behavior_isaacgym.py  test_physics_mapping_isaacgym.py  test_render_modes.py  test_scene_spawn_isaacgym.py  test_static_move_isaacgym.py  test_subset_write_isaacgym.py
src/holosoma/tests/simulators/isaacsim/: test_all_root_states_unified_isaacsim.py  test_behavior_isaacsim.py  test_object_spawner_cfg.py  test_prim_naming.py  (+5 more)
src/holosoma/tests/utils/: test_path_resolution.py  test_torch_jit.py
src/holosoma_inference/holosoma_inference_service/holosoma_msgs/: CMakeLists.txt  package.xml
(+131 files in other folders)
